<resources>
  <string name="app_name">Hillforts</string>
  <string name="enter_name"> Please enter name of hillfort </string>
  <string name="button_addHillfort">Add hillfort</string>
  <string name="button_editHillfort">Save Changes</string>
  <string name="hint_hillfortName">Name</string>
  <string name="hint_hillfortDescription">Description</string>
  <string name="hint_hillfortNotes">Notes</string>
  <string name="hint_favourite">Favourite</string>
  <string name="menu_addNewHillfort">Add</string>
  <string name="menu_cancel">Cancel</string>
  <string name="menu_delete">Delete</string>
  <string name="menu_save">Save</string>
  <string name="button_addImage"> Add Image </string>
  <string name="button_updateImage"> Update Image </string>
  <string name="select_hillfort_image"> Select Image </string>
  <string name="button_setLocation"> Set location </string>
  <string name="title_activity_map">Map</string>
  <string name="hint_visited">Site visited?</string>
  <string name="hint_visitedDate">Select date </string>
  <string name="drawer_logout">Log out</string>
  <string name="drawer_stats">Statistics</string>
  <string name="drawer_settings">Settings</string>
  <string name="drawer_about">About</string>
  <string name="drawer_favourites">Favourites</string>
  <string name="drawer_search">Search</string>
  <string name="drawer_map">Map</string>
  <string name="hint_emailaddress">E-mail</string>
  <string name="hint_password">Password</string>
  <string name="btn_login">Log in</string>
  <string name="btn_signup">Sign up</string>
  <string name="hint_createaccount">Don\'t have an account? \n Register now below</string>
  <string name="password_change">Change your login details</string>
  <string name="email_change">Change your email</string>
  <string name="hint_new_email">Enter your new email</string>
  <string name="hint_new_password">Enter your new password</string>
  <string name="toast_incorrectpassword">Password is not correct. Please try again</string>
  <string name="toast_incorrectemail">E-mail address not recognised. Please create an account</string>
  <string name="Users_hillforts">Hillforts on your list: </string>
  <string name="totalUsersHillforts">$ Total</string>
  <string name="Visited_hillforts">Visited hillforts: </string>
  <string name="totalVisitedHillforts">$ TotalVisited</string>
  <string name="totalFavouriteHillforts">$ TotalFavourites</string>
  <string name="FavouriteHillforts">Hillforts you marked as favourite</string>
  <string name="progress">Your progress:</string>
  <string name="enter_credentials">Please provide e-mail address and password</string>
  <string name="title_activity_hillfrots_maps">Map</string>
  <string name="hillfort_image_placeholder">Hillfort Image</string>
  <string name="hillfort_title_placeholder">Hillfort Title</string>
  <string name="hillfort_description_placeholder">Hillfort Description</string>


</resources>
