<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img_splasscreen"
    android:gravity="bottom"
    android:orientation="vertical"
    android:paddingBottom="80dp">

  <EditText
      android:id="@+id/email"
      android:layout_width="0dp"
      android:layout_height="40dp"
      android:layout_marginStart="24dp"
      android:layout_marginTop="300dp"
      android:layout_marginEnd="24dp"
      android:layout_marginBottom="8dp"
      android:background="@android:color/white"
      android:hint="@string/hint_emailaddress"
      android:inputType="textEmailAddress"
      android:maxLength="25"
      android:maxLines="1"
      android:textColor="@color/colorPrimaryDark"
      android:textSize="14sp"
      app:layout_constraintBottom_toTopOf="@+id/password"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <EditText
      android:id="@+id/password"
      android:layout_width="0dp"
      android:layout_height="45dp"
      android:layout_marginStart="24dp"
      android:layout_marginEnd="24dp"
      android:background="@android:color/white"
      android:hint="@string/hint_password"
      android:inputType="textPassword"
      android:maxLength="25"
      android:maxLines="1"
      android:textColor="@color/colorPrimaryDark"
      android:textSize="14sp"
      app:layout_constraintBottom_toTopOf="@+id/login"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.50"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/email" />

  <Button
      android:id="@+id/login"
      android:layout_width="0dp"
      android:layout_height="36dp"
      android:layout_marginStart="32dp"
      android:layout_marginTop="8dp"
      android:layout_marginEnd="32dp"
      android:layout_marginBottom="8dp"
      android:background="@color/colorAccent"
      android:text="@string/btn_login"
      android:textColor="@android:color/white"
      android:textSize="16sp"
      app:layout_constraintBottom_toTopOf="@+id/progressBar"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/password" />

  <ProgressBar
      android:id="@+id/progressBar"
      style="@style/Widget.AppCompat.ProgressBar"
      android:layout_width="40dp"
      android:layout_height="40dp"
      android:layout_marginStart="8dp"
      android:layout_marginEnd="8dp"
      app:layout_constraintBottom_toTopOf="@+id/textView"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.498"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/login" />

  <TextView
      android:id="@+id/textView"
      android:layout_width="248dp"
      android:layout_height="60dp"
      android:layout_gravity="center"
      android:layout_marginStart="8dp"
      android:layout_marginTop="8dp"
      android:layout_marginEnd="8dp"
      android:text="@string/hint_createaccount"
      android:textColor="@android:color/white"
      android:textSize="20sp"
      app:layout_constraintBottom_toTopOf="@+id/signup"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/progressBar"
      app:layout_constraintVertical_bias="0.498" />

  <Button
      android:id="@+id/signup"
      android:layout_width="0dp"
      android:layout_height="36dp"
      android:layout_marginStart="32dp"
      android:layout_marginEnd="32dp"
      android:layout_marginBottom="24dp"
      android:background="@color/colorAccent"
      android:text="@string/btn_signup"
      android:textColor="@android:color/white"
      android:textSize="16sp"
      app:layout_constraintBottom_toBottomOf="@+id/textView"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="parent"
      app:layout_constraintVertical_bias="0.50" />
</androidx.constraintlayout.widget.ConstraintLayout>