<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activities.HillfrotsMapsActivity"
    tools:layout_editor_absoluteY="56dp"
    tools:showIn="@layout/activity_hillfrots_maps">

  <com.google.android.gms.maps.MapView
      android:id="@+id/mapView"
      android:layout_width="0dp"
      android:layout_height="0dp"
      android:layout_marginStart="8dp"
      android:layout_marginTop="8dp"
      android:layout_marginEnd="8dp"
      android:layout_marginBottom="8dp"
      app:layout_constraintBottom_toTopOf="@+id/cardView"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.522" />

  <androidx.cardview.widget.CardView
      android:id="@+id/cardView"
      android:layout_width="0dp"
      android:layout_height="112dp"
      android:layout_marginStart="16dp"
      android:layout_marginTop="8dp"
      android:layout_marginEnd="16dp"
      android:layout_marginBottom="24dp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/mapView">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="103dp">

      <TextView
          android:id="@+id/currentName"
          android:layout_width="0dp"
          android:layout_height="0dp"
          android:layout_marginStart="2dp"
          android:layout_marginTop="2dp"
          android:layout_marginEnd="8dp"
          android:layout_marginBottom="2dp"
          android:text="@string/hillfort_title_placeholder"
          app:layout_constraintBottom_toTopOf="@+id/currentDescription"
          app:layout_constraintEnd_toStartOf="@+id/currentImage"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent" />

      <TextView
          android:id="@+id/currentDescription"
          android:layout_width="0dp"
          android:layout_height="0dp"
          android:layout_marginStart="2dp"
          android:layout_marginTop="2dp"
          android:layout_marginEnd="8dp"
          android:layout_marginBottom="2dp"
          android:text="@string/hillfort_description_placeholder"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintEnd_toStartOf="@+id/currentImage"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/currentName" />

      <ImageView
          android:id="@+id/currentImage"
          android:layout_width="0dp"
          android:layout_height="0dp"
          android:layout_marginTop="3dp"
          android:layout_marginEnd="3dp"
          android:layout_marginBottom="3dp"

          android:contentDescription="@string/hillfort_image_placeholder"
          android:text="@string/hillfort_image_placeholder"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toEndOf="@+id/currentName"
          app:layout_constraintTop_toTopOf="parent"
          tools:srcCompat="@tools:sample/backgrounds/scenic" />
    </androidx.constraintlayout.widget.ConstraintLayout>
  </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>